Refactor tests
- src/test holds unit tests that should be testing one feature alone

- src/integration holds integration tests that can use extraction,
  solvers, codegen, etc..

- src/regression runs all the regression suites.